--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,11 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 img{ 
-    max-width: 100%; 
+    width: 100%; 
 } 
 
 .container{
@@ -7,7 +13,7 @@ img{
     display:flex;
     justify-content: center;
     align-items: center;
-    margin-top: 6rem;
+    height: 600px;
     
 
 }
@@ -15,8 +21,13 @@ img{
 .container .card {
     border: 1px solid lightgray;
     box-shadow: 0 0 10px #ababab;
-    max-width: 1200px;
-    /* height: 400px; */
+    height: 100%;
+}
+
+.img_main{
+    min-width: 100%;
+    min-height: 100%;
+    max-height: 300px;
 }
 
 
@@ -26,4 +37,18 @@ img{
 
 .active{ 
     border: 4px solid white; 
+}
+
+.img_description{
+    text-align: end;
+    bottom:2rem;
+    right:3rem;
+}
+
+.navigator{
+    width: 100%;
+    height: 100%;
+    top:0;
+
+
 }
