--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ img{
     justify-content: center;
     align-items: center;
     height: 600px;
+    margin-top: 6rem;
     
 
 }
@@ -40,15 +41,22 @@ img{
 }
 
 .img_description{
-    text-align: end;
+    text-align:end;
     bottom:2rem;
     right:3rem;
+    width: 90%;
 }
 
 .navigator{
     width: 100%;
     height: 100%;
     top:0;
-
-
 }
+
+.prev, .next{ 
+    background-color: rgba(255, 255, 255, 0.781); 
+    border-radius: 50%;
+    padding: 5px 10px;
+    margin: 10px;
+    cursor: pointer; 
+} 
